--- a/app/templates/landing/patient-dashboard.html
+++ b/app/templates/landing/patient-dashboard.html
@@ -119,7 +119,7 @@
                     <div class="col-xl-3 col-lg-4 col-md-5 col-12">
                         <div class="card border-0 p-4 rounded shadow overflow-hidden sticky-bar">
                             <div class="d-md-flex text-center text-md-start align-items-center">
-                                <img src="{{ url_for('static', filename='uploads/' + patient.image_file) }}" class="avatar avatar-md-md rounded-circle border shadow" alt="">
+                                <img src="{{ img_file }}" class="avatar avatar-md-md rounded-circle border shadow" alt="">
                                 <div class="ms-md-3 mt-3 mt-sm-0">
                                     <h5 class="d-block mb-1 mb-sm-0">{{ patient.first_name }} {{ patient.last_name }}</h5>
                                     <small class="text-muted">{{ patient.age }} Years old</small>
