--- a/app/templates/admin/signup.html
+++ b/app/templates/admin/signup.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>Doctris - Doctor Appointment Booking System</title>
+        <title>YCT Medicals</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Premium Bootstrap 5 Landing Page Template" />
         <meta name="keywords" content="Appointment, Booking, System, Dashboard, Health" />
@@ -13,7 +13,7 @@
         <meta name="website" content="https://shreethemes.in" />
         <meta name="Version" content="v1.4.0" />
         <!-- favicon -->
-        <link rel="shortcut icon" href="{{ url_for('static', filename='assets/images/favicon.ico') }}">
+        <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='assets/images/favicon.ico') }}"> -->
         
         <!-- Css -->
         <!-- Bootstrap Css -->
