--- a/app/templates/admin/add-doctor.html
+++ b/app/templates/admin/add-doctor.html
@@ -14,6 +14,16 @@
             
                                     <form class="mt-4" action="{{ url_for('admin.add_doctor') }}" method="post" enctype="multipart/form-data">
                                         <div class="row">
+                                            <!-- Flash messages -->
+                                            {% with messages = get_flashed_messages(with_categories=true) %}
+                                                {% if messages %}
+                                                    {% for category, message in messages %}
+                                                        <div class="alert alert-{{ category }}">
+                                                            {{ message }}
+                                                        </div>
+                                                    {% endfor %}
+                                                {% endif %}
+                                            {% endwith %}
                                             <div class="col-md-6">
                                                 <div class="mb-3">
                                                     <label class="form-label">First Name</label>
