--- a/app/templates/landing/doctor-appointment.html
+++ b/app/templates/landing/doctor-appointment.html
@@ -11,7 +11,7 @@
                             </div>
 
                             <div class="text-center avatar-profile margin-nagative mt-n5 position-relative pb-4 border-bottom">
-                                <img src="{{ url_for('static', filename='uploads/' + doctor.image_file) }}" class="rounded-circle shadow-md avatar avatar-md-md" alt="">
+                                <img src="{{ doctor.image_file }}" class="rounded-circle shadow-md avatar avatar-md-md" alt="">
                                 <h5 class="mt-3 mb-1">Dr. {{ doctor.first_name }} {{ doctor.last_name }}</h5>
                                 <p class="text-muted mb-0">{{ doctor.department.name }}</p>
                             </div>
@@ -56,7 +56,7 @@
                                                 <td class="p-3">
                                                     <a href="#" class="text-dark">
                                                         <div class="d-flex align-items-center">
-                                                            <img src="{{ url_for('static', filename='uploads/' + doctor.image_file) }}" class="avatar avatar-md-sm rounded-circle shadow" alt="">
+                                                            <img src="{{ doctor.image_file }}" class="avatar avatar-md-sm rounded-circle shadow" alt="">
                                                             <span class="ms-2">{{ appointment.patient.first_name }} {{ appointment.patient.last_name }}</span>
                                                         </div>
                                                     </a>
@@ -69,7 +69,7 @@
                                                 <td class="p-3">
                                                     <a href="#" class="text-dark">
                                                         <div class="d-flex align-items-center">
-                                                            <img src="{{ url_for('static', filename='uploads/' + doctor.image_file) }}" class="avatar avatar-md-sm rounded-circle border shadow" alt="">
+                                                            <img src="{{ doctor.image_file }}" class="avatar avatar-md-sm rounded-circle border shadow" alt="">
                                                             <span class="ms-2">Dr. {{ doctor.first_name }} {{ doctor.last_name }}</span>
                                                         </div>
                                                     </a>
@@ -110,7 +110,7 @@
                     </div>
                     <div class="modal-body p-3 pt-4">
                         <div class="d-flex align-items-center">
-                            <img src="{{ url_for('static', filename='uploads/' + doctor.image_file) }}" class="avatar avatar-small rounded-pill" alt="">
+                            <img src="{{ doctor.image_file }}" class="avatar avatar-small rounded-pill" alt="">
                             <h5 class="mb-0 ms-3">{{ appointment.patient.first_name }} {{ appointment.patient.last_name }}</h5>
                         </div>
                         <ul class="list-unstyled mb-0 d-md-flex justify-content-between mt-4">
@@ -206,4 +206,6 @@
         <!-- Modal end -->
 
         <!-- Footer Start -->
+
+{% include 'landing/footer.html' %}
         
