--- a/app/templates/landing/doctor-dashboard.html
+++ b/app/templates/landing/doctor-dashboard.html
@@ -11,7 +11,7 @@
                             </div>
 
                             <div class="text-center avatar-profile margin-nagative mt-n5 position-relative pb-4 border-bottom">
-                                <img src="{{ url_for('static', filename='uploads/' + doctor.image_file) }}" class="rounded-circle shadow-md avatar avatar-md-md" alt="">
+                                <img src="{{ doctor.image_file }}" class="rounded-circle shadow-md avatar avatar-md-md" alt="">
                                 <h5 class="mt-3 mb-1">{{ doctor.first_name }} {{ doctor.last_name }}</h5>
                                 <p class="text-muted mb-0">{{ doctor.department.name }}</p>
                             </div>
@@ -34,3 +34,5 @@
         </section><!--end section-->
         <!-- End Hero -->
 
+
+{% include 'landing/footer.html' %}
