--- a/app/templates/landing/footer.html
+++ b/app/templates/landing/footer.html
@@ -1,17 +1,17 @@
 <!-- Footer Start -->
-<footer class="py-4">
+<!-- <footer class="py-4">
     <div class="container-fluid">
         <div class="row align-items-center">
             <div class="col-sm-6">
                 <div class="text-sm-start text-center">
                     <p class="mb-0"><script>document.write(new Date().getFullYear())</script> © YCT Medicals.</p>
                 </div>
-            </div><!--end col-->
+            </div>end col
 
            
-        </div><!--end row-->
-    </div><!--end container-->
-</footer><!--end footer-->
+        </div>end row
+    </div>end container
+</footer>end footer -->
 <!-- End -->
 
 <!-- Back to top -->
