--- a/app/templates/landing/header.html
+++ b/app/templates/landing/header.html
@@ -25,7 +25,7 @@
         <link href="{{ url_for('static', filename='assets/libs/@iconscout/unicons/css/line.css') }}" type="text/css" rel="stylesheet" />
         <!-- Style Css-->
         <link href="{{ url_for('static', filename='assets/css/style.min.css') }}" class="theme-opt" rel="stylesheet" type="text/css" />
-
+        
     </head>
 
     <body>
@@ -72,10 +72,10 @@
 
                     <li class="list-inline-item mb-0 ms-1">
                         <div class="dropdown dropdown-primary">
-                            <button type="button" class="btn btn-pills btn-soft-primary dropdown-toggle p-0" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="{{ url_for('static', filename='uploads/' + doctor.image_file) }}" class="avatar avatar-ex-small rounded-circle" alt=""></button>
+                            <button type="button" class="btn btn-pills btn-soft-primary dropdown-toggle p-0" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="{{ doctor.image_file }}" class="avatar avatar-ex-small rounded-circle" alt=""></button>
                             <div class="dropdown-menu dd-menu dropdown-menu-end shadow border-0 mt-3 py-3" style="min-width: 200px;">
                                 <a class="dropdown-item d-flex align-items-center text-dark" href="#">
-                                    <img src="{{ url_for('static', filename='uploads/' + doctor.image_file) }}" class="avatar avatar-md-sm rounded-circle border shadow" alt="">
+                                    <img src="{{ doctor.image_file }}" class="avatar avatar-md-sm rounded-circle border shadow" alt="">
                                     <div class="flex-1 ms-2">
                                         <span class="d-block mb-1">{{ doctor.first_name }} {{ doctor.last_name }}</span>
                                         <small class="text-muted">{{ doctor.department.name }}</small>
