--- a/app/templates/landing/patient-dashboard.html
+++ b/app/templates/landing/patient-dashboard.html
@@ -76,7 +76,7 @@
                             <button type="button" class="btn btn-pills btn-soft-primary dropdown-toggle p-0" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="{{ url_for('static', filename='assets/images/doctors/01.jpeg') }}" class="avatar avatar-ex-small rounded-circle" alt=""></button>
                             <div class="dropdown-menu dd-menu dropdown-menu-end shadow border-0 mt-3 py-3" style="min-width: 200px;">
                                 <a class="dropdown-item d-flex align-items-center text-dark" href="#">
-                                    <img src="{{ url_for('static', filename='assets/images/doctors/01.jpeg') }}" class="avatar avatar-md-sm rounded-circle border shadow" alt="">
+                                    <img src="{{ patient.image_file }}" class="avatar avatar-md-sm rounded-circle border shadow" alt="">
                                     <div class="flex-1 ms-2">
                                         <span class="d-block mb-1">{{ patient.first_name }} {{ patient.last_name }}</span>
                                         <!-- <small class="text-muted">Orthopedic</small> -->
