Added view-appointment.html to landing directory

--- a/app/templates/landing/doctor-appointment.html
+++ b/app/templates/landing/doctor-appointment.html
@@ -207,5 +207,7 @@
 
         <!-- Footer Start -->
 
+{% include "landing/view-appointment.html" %}
+
 {% include 'landing/footer.html' %}
         
